--- a/logan_joecks.tex
+++ b/logan_joecks.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,letterpaper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[11pt,letterpaper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
 \moderncvstyle{banking}                             % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
@@ -11,14 +11,14 @@
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 
 % adjust the page margins
-\usepackage[scale=0.85]{geometry}
+\usepackage[scale=0.80]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
 % personal data
 \name{Logan}{Joecks}
 \title{Web Developer}                               % optional, remove / comment the line if not wanted
-\address{82 Prichard Ave Apt. 1, Somerville, MA 02144}{}{}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
+\address{36 Hall Ave Apt. 1, Somerville, MA 02144}{}{}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{617-365-3234}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 % \phone[fixed]{+2~(345)~678~901}
 % \phone[fax]{+3~(456)~789~012}
@@ -63,7 +63,23 @@
 
 \section{Experience}
 \subsection{Professional}
-\cventry{Sept 2013--Present}{Web Developer}{Orsyp Software}{Boston, MA}{}{
+\cventry{Aug 2014--Present}{Front End Developer}{Second Decimal}{Burlington, MA}{}{
+\begin{itemize}%
+\item Develop front-end of enterprise-level, Tax Preparation web application
+  \begin{itemize}%
+  \item Sole front-end developer since product's inception (HTML/CSS/Javascript)
+  \item AngularJS framework
+  \item Bootstrap
+  \end{itemize}
+\item Part of three-person team
+  \begin{itemize}%
+  \item Creator and part-designer of UI based on requirements from VP
+  \item Work with C\# developers to create API contract
+  \item Agile Software Development
+  \item SVN for source control \newline{}
+  \end{itemize}
+\end{itemize}}
+\cventry{Sept 2013--July 2014}{Web Developer}{Orsyp Software (now Automic)}{Boston, MA}{}{
 \begin{itemize}%
 \item Develop front-end of enterprise-level, metric analysis SaaS web application
   \begin{itemize}%
@@ -81,7 +97,7 @@
     \item Demo app at the end of each sprint (presenter on multiple occasions)
     \end{itemize}
   \item Continuous integration server with unit testing
-  \item Mercurial for source control \newline{}
+  \item Mercurial for source control
   \end{itemize}
 \end{itemize}}
 
